--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,11 @@
 include ./layout.pug
 body
     .container.mt-5
-      h1 List
+      .row.d-flex.align-items-center
+        .col-md-6
+          h1 List
+        .col-md-6.text-end
+          a.btn.btn-success(href='/add', role='button') Add      
       table.table.table-responsive.table-hover.table-striped.table-dark
         thead
           tr
@@ -14,45 +18,44 @@ body
             th(scope="col") Actions
         tbody
 script.
-      document.addEventListener('DOMContentLoaded', function() {
-        axios.get('/api/ticket')
-          .then(function(response) {
-            const tickets = response.data;
-            const tableBody = document.querySelector('table tbody');
-            tickets.forEach(t => {
-              const row = document.createElement('tr');
-              const ticket = t.ticket
-              row.innerHTML = `
-                <td>${t.id}</td>
-                <td>${ticket.eventName}</td>
-                <td>${ticket.eventDateTime}</td>
-                <td>${ticket.venue}</td>
-                <td>${ticket.contactPhone}</td>
-                <td>${ticket.seat}</td>
-                <td>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-danger btn-sm" data-id="${t.id}">Delete</button>
-                </td>
-              `;
-              tableBody.appendChild(row);
-            });
-          })
-          .catch(function(error) {
-            console.log(error);
-          });
-
-
-          // Use event delegation for delete buttons
-          document.addEventListener('click', function(event) {
-            if (event.target && event.target.classList.contains('btn-danger')) {
-              const ticketId = event.target.getAttribute('data-id');
-              axios.delete(`/api/ticket/${ticketId}`).then(function(response) {
-                console.log('Delete successful', response);
-                location.href = '/'
-              })
-              .catch(function(error) {
-                console.log('Error deleting ticket', error);
-              });
-            }
-          });
+  document.addEventListener('DOMContentLoaded', function() {
+    axios.get('/api/ticket').then(function(response) {
+      const tickets = response.data;
+      const tableBody = document.querySelector('table tbody');
+      tickets.forEach(t => {
+        const row = document.createElement('tr');
+        const ticket = t.ticket
+        row.innerHTML = `
+          <td>${t.id}</td>
+          <td>${ticket.eventName}</td>
+          <td>${ticket.eventDateTime}</td>
+          <td>${ticket.venue}</td>
+          <td>${ticket.contactPhone}</td>
+          <td>${ticket.seat}</td>
+          <td>
+            <button class="btn btn-primary btn-sm" data-id="${t.id}" onclick="window.location.href='/update/${t.id}'">Update</button>
+            <button class="btn btn-danger btn-sm" data-id="${t.id}">Delete</button>
+          </td>
+        `;
+        tableBody.appendChild(row);
       });
+    })
+    .catch(function(error) {
+      console.log(error);
+    });
+
+    // Use event delegation for delete buttons
+    document.addEventListener('click', function(event) {
+      if (event.target && event.target.classList.contains('btn-danger')) {
+        const ticketId = event.target.getAttribute('data-id');
+        axios.delete(`/api/ticket/${ticketId}`).then(function(response) {
+          alert('Deleted successfully', response);
+          location.href = '/'
+        })
+        .catch(function(error) {
+          alert('Error deleting ticket: ' + error);
+        });
+      }
+    });
+    
+  });
